# LOGOS_PXL_Core

./: .ExtractCore.aux  .Makefile.coq.d  .Makefile.d  .env.example  .gitattributes  .gitmodules  .lia.cache  .pre-commit-config.yaml  .test_boolean.aux  AUDIT_COMPLETION_SUMMARY.md  AUDIT_PHASE2.md  BUILD_SYSTEM.md  CHANGELOG.md  CODEOWNERS  CONSTRUCTIVE_CORE_LOCKED_IN.md  CONTRIBUTING.md  Compatibilism_CoffeeTea.html  CoqMakefile.make.conf  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile.logos-core  Dockerfile.pxl-core  ExtractCore.glob  ExtractCore.v  ExtractCore.vo  FALSIFIABILITY_COMPLETION_REPORT.md  FINAL_INTEGRATION_COMPLETE.md  FINAL_ROLLOUT_REPORT.md  FINAL_VALIDATION_REPORT_v0.5-rc1.md  GOAL5_PRODUCTION_COMPLETE.md  GUI_SCAFFOLDING_COMPLETE.md  IEL_RESTRUCTURING_STATUS.md  INTEGRATION_COMPLETE.md  INVESTOR_GUIDE.md  INVESTOR_ONE_PAGER.md  INVESTOR_PRESENTATION.md  MODAL_AXIOM_SOUNDNESS_COMPLETE.md  MODAL_RULES_SYSTEMS_COMPLETE.md  Makefile  (+150 more)
.githooks/: pre-commit
.github/: pull_request_template.md
.reuse/: dep5
3PDN/: README.md
LOGOS/: Dockerfile.pxl-core
LOGOS_AGI/: README.md  logos_code_distribution.md
LOGOS_V2/: DEMO_README.md  LOGOS.py  check_imports.py  demo_gui.py  entry.py  launch_demo.py  logos_monitor.py
Misc/: .coq-sources  .env.example  .pre-commit-config.yaml  README.md  pre-commit  vscode_prompt_templates.md  vscode_quick_prompts.md
PXL/: CONSTRUCTIVE_CORE_LOCKED_IN.md  CoqMakefile.make  ExtractCore.v  IEL_RESTRUCTURING_STATUS.md  MODAL_AXIOM_SOUNDNESS_COMPLETE.md  Makefile.coq  Makefile.coq.conf  README.dev.md  README.md  _CoqProject
PXL_IEL/: Makefile  Makefile.conf  README.md
PXL_IEL_overlay_system/: README.md
PXLs/: .PXLv3.aux  PXLv3.glob  PXLv3.v  PXLv3.vo
Three_Pillars_Corpus_Literature/: README.md
api/: .E2EDemo.aux  .PolicyDemo.aux  .ProofToken.aux  .ToolGate.aux  .policies.aux  PolicyDemo.v  ProofToken.v  ToolGate.v  adversarial_test.py
attested_io/: __init__.py  attested_demo.py  attested_io.py
audit/: README.md  decisions.jsonl
ci/: pin_kernel_hash.ps1  test_audit.py  test_proof_endpoint.py  verify_pxl.sh
config/: ontological_properties.json
configs/: agi_config.json  config.json  iel_registry.yaml  ontoprops.normalized.json  ontoprops.remapped.json  pillar_obligations.json  property_capabilities.json  router_rules.json
demo_logs/: safety_violations.jsonl
deploy/: Dockerfile.overlay-v4  docker-compose.yml
docs/: ArithmoPraxis.md  CONSTRUCTIVE_LINDENBAUM.md  COQ_INDEX.md  ChremaPraxis_OVERVIEW.md  DISASTER_RECOVERY.md  DOMAINS_OVERVIEW.md  DynaPraxis_OVERVIEW.md  GLOSSARY.md  GnosiPraxis_OVERVIEW.md  HexiPraxis_OVERVIEW.md  IELS_SPEC.md  IEL_INDEX.md  IEL_STATUS.md  MONITORING.md  MuPraxis_OVERVIEW.md  RELEASE_NOTES.md  ROADMAP.md  SECRETS.md  ThemiPraxis_OVERVIEW.md  TropoPraxis_OVERVIEW.md  TychePraxis_OVERVIEW.md  (+3 more)
(+4351 files in other folders)
